<resources>
    <string name="app_name" translatable="false">Kotori</string>

    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>
    <string name="altitude">Altitude</string>

    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>
    <string name="accept">Accept</string>

    <string name="running">Route in process…</string>
    <string name="notification">Speed: %1$.0f%2$s, Distance: %3$.0f%4$s</string>

    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use imperial units</string>
    <string name="pref_miles_per_hour_summary">Display data in imperial units instead of metric system.</string>
    <string name="pref_mean_sea_level">Use mean sea level</string>
    <string name="pref_mean_sea_level_summary">Altitude as MSL instead of WGS84. MSL values depend on the implementation of the manufacturer.</string>
    
    <!-- app theme preference strings -->
    <string name="theme">Theme</string>
    
    <string-array name="themes">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    
    <string-array name="theme_values" translatable="false">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    
    <string name="default_theme" translatable="false">system</string>

    <string name="license">License</string>
    <string name="donate">Buy me a coffee ☕</string>
    <string name="source_code">Source code</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Version</string>

    <string name="noti_id" translatable="false">kotoriid</string>
    <string name="github" translatable="false">https://gitlab.com/isseigx/kotori</string>
    <string name="donate_link" translatable="false">https://ko-fi.com/isseigx</string>
    <string name="license_type" translatable="false">GNU General Public License 3</string>
</resources>