<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        android:title="@string/settings">

    <SwitchPreferenceCompat
        android:key="auto_average"
        android:title="@string/pref_auto_average"
        android:summary="@string/pref_auto_average_summary"
        />

    <SwitchPreferenceCompat
        android:key="imperial"
        android:title="@string/pref_miles_per_hour"
        android:summary="@string/pref_miles_per_hour_summary"
    />
    
    <ListPreference
        android:key="theme"
        android:title="@string/theme"
        android:entries="@array/themes"
        android:entryValues="@array/theme_values"
        android:defaultValue="@string/default_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_info">

        <Preference
            android:key="license"
            android:title="@string/license"
            android:summary="@string/license_type">
        </Preference>

        <Preference
            android:key="github"
            android:title="@string/source_code"
            android:summary="">

            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/github"/>

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>