<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/menu_main"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_play"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/currentSpeed"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="80sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/distance"
            android:drawableLeft="@drawable/baseline_navigation_24"
            android:text="@string/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/currentSpeed"/>

        <TextView
            android:id="@+id/time"
            android:drawableLeft="@drawable/baseline_timer_24"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentSpeed"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:dividerInsetStart="16dp"
            app:dividerInsetEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/distance"/>

        <TextView
            android:id="@+id/maxSpeed"
            android:text="@string/max_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>

        <TextView
            android:id="@+id/averageSpeed"
            android:text="@string/average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/maxSpeed"
            app:layout_constraintStart_toStartOf="@id/maxSpeed"/>

        <TextView
            android:id="@+id/accuracy"
            android:text="@string/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/averageSpeed"
            app:layout_constraintStart_toStartOf="@id/averageSpeed"/>

        <TextView
            android:id="@+id/satellite"
            android:text="@string/satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/accuracy"
            app:layout_constraintStart_toStartOf="@id/accuracy"/>
            
        <TextView
            android:id="@+id/altitude"
            android:text="@string/altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/satellite"
            app:layout_constraintStart_toStartOf="@id/satellite"/>

        <!-- Text views for data -->
        <TextView
            android:id="@+id/maxSpeedData"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>

        <TextView
            android:id="@+id/averageSpeedData"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/maxSpeedData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>

        <TextView
            android:id="@+id/accuracyData"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/averageSpeedData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>

        <TextView
            android:id="@+id/satelliteData"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/accuracyData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>
        
        <TextView
            android:id="@+id/altitudeData"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/satelliteData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
